feat(MA-7): create patient endpoint
