# patient-ms/src/main/resources/static/openapi/patient-ms-patient-api.yaml
@@ -34,6 +34,34 @@ paths:
           description: Unauthorized
         '403':
           description: Forbidden
+    post:
+      tags:
+        - patient
+      summary: create a patient
+      operationId: createPatient
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PatientCreateDto'
+      responses:
+        '201':
+          description: patient created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PatientDto'
+
+        '400':
+          description: Invalid input
+
+        '401':
+          description: Unauthorized
+
+        '403':
+          description: Forbidden
+
   /patient/{id}:
     get:
       tags:
@@ -73,6 +101,11 @@ components:
     PatientDto:
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
+          description: "The unique identifier of the patient"
+          example: 1
         firstName:
           type: string
           description: "the first name of the patient"
@@ -89,7 +122,7 @@ components:
         gender:
           type: string
           enum: ["M", "F"]
-          description: the gender of the patient
+          description: "the gender of the patient"
           example: "M"
         address:
           type: string
@@ -99,5 +132,48 @@ components:
           type: string
           description: "the phone number of the patient"
           example: "0123456789"
-
-
+    PatientCreateDto:
+      type: object
+      properties:
+        firstName:
+          type: string
+          description: "the first name of the patient"
+          x-field-extra-annotation: |
+            @NotBlank(message = "First name is required")
+            @Size(max = 100, message = "First name must not exceed 100 characters")
+          example: "John"
+        lastName:
+          type: string
+          description: "the last name of the patient"
+          x-field-extra-annotation: |
+            @NotBlank(message = "Last name is required")
+            @Size(max = 100, message = "Last name must not exceed 100 characters")
+          example: "Doe"
+        birthDate:
+          type: string
+          format: date
+          description: "the birth date of the patient in format yyyy-MM-dd"
+          x-field-extra-annotation: |
+            @NotNull(message = "Birthdate is mandatory")
+            @Past(message = "Birthdate must be a past date")
+          example: "1980-01-01"
+        gender:
+          type: string
+          enum: ["M", "F"]
+          description: the gender of the patient
+          x-field-extra-annotation: |
+            @NotNull(message = "Gender is mandatory")
+          example: "M"
+        address:
+          type: string
+          description: "the address of the patient"
+          x-field-extra-annotation: |
+            @Size(min= 5 ,max = 50, message = "Address must not exceed 50 characters")
+            @Pattern(regexp = "^\\d+\\s+[A-Za-z0-9\\s]+$", message = "Address must start with a number followed by the street name")
+          example: "1 High Street"
+        phoneNumber:
+          type: string
+          description: "the phone number of the patient"
+          x-field-extra-annotation: |
+            @Pattern(regexp = "^(\\d{10}|\\d{3}-\\d{3}-\\d{4})$", message = "Phone number must be exactly 10 digits or in the format xxx-xxx-xxxx")
+          example: "0123456789"
